@@ -1,5 +1,8 @@
 Revision history for Import-Into
 
+  - module loading is now done while importing, making it unnecessary to load
+    them beforehand
+
 1.002002 - 2014-05-06
   - minor metadata updates
 
